--- a/Demo_20180106_Tank/Demo_20180106_Tank.CSharp.csproj
+++ b/Demo_20180106_Tank/Demo_20180106_Tank.CSharp.csproj
@@ -84,6 +84,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Sprites\SelfDestroy.cs" />
+    <Compile Include="Assets\Sprites\Shell.cs" />
     <Compile Include="Assets\Sprites\TankAttack.cs" />
     <Compile Include="Assets\Sprites\TankMovement.cs" />
   </ItemGroup>
