--- a/Demo_20180106_Tank/Demo_20180106_Tank.csproj
+++ b/Demo_20180106_Tank/Demo_20180106_Tank.csproj
@@ -84,6 +84,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Sprites\SelfDestroy.cs" />
     <Compile Include="Assets\Sprites\Shell.cs" />
     <Compile Include="Assets\Sprites\TankAttack.cs" />
     <Compile Include="Assets\Sprites\TankMovement.cs" />
