增加血条的显示

--- a/Demo_20180106_Tank/Demo_20180106_Tank.CSharp.csproj
+++ b/Demo_20180106_Tank/Demo_20180106_Tank.CSharp.csproj
@@ -88,7 +88,9 @@
     <Compile Include="Assets\Sprites\SelfDestroy.cs" />
     <Compile Include="Assets\Sprites\Shell.cs" />
     <Compile Include="Assets\Sprites\TankAttack.cs" />
+    <Compile Include="Assets\Sprites\TankHealth.cs" />
     <Compile Include="Assets\Sprites\TankMovement.cs" />
+    <Compile Include="Assets\Sprites\UIDirectionControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Fonts\Bowlby_One\OFL.txt" />
